--- a/css/style.css
+++ b/css/style.css
@@ -316,8 +316,17 @@ nav.right ul li a:focus {
 }
 
 /* === Google Docs Iframe Container === */
-.iframe-container {
+.iframe-actions-container {
   max-width: 1150px;
+  margin: 2rem auto;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+}
+
+.iframe-news-container {
+  max-width: 750px;
   margin: 2rem auto;
   border-radius: 16px;
   overflow: hidden;
